--- a/app/web/css/site.css
+++ b/app/web/css/site.css
@@ -113,3 +113,11 @@ a.desc:after {
 .nav > li > form > button.logout:focus {
     outline: none;
 }
+
+.month_year {
+    text-align: center;
+}
+
+#day {
+    height: 100%;
+}
